[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["h-kobayashi <81208066+abist-kobayashi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# selenium = "^4.7.2"
numpy = "^1.24.0"
# scipy = "^1.9.3"
# scikit-learn = "^1.2.0"
# networkx = "^2.8.8"
# jupyter = "^1.0.0"
# matplotlib = "^3.6.2"
# online-judge-tools = "^11.5.1"
# streamlit = "^1.16.0"
atcoder-tools = "^2.12.0"
markupsafe = "2.0.1"
ac-library-python = {git = "https://github.com/not522/ac-library-python"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
