[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ac-library-python",
    "atcoder-tools>=2.14.0",
    "markupsafe==2.0.1",
    "numpy>=2.1.2",
    "ruff>=0.6.9",
    "sortedcontainers>=2.4.0",
]

[tool.uv.sources]
ac-library-python = { git = "https://github.com/not522/ac-library-python" }
